feat: add company module

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "export NODE_ENV=production&& nest start",
     "dev": "export NODE_ENV=development&& nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -45,6 +46,8 @@
     "@nestjs/platform-express": "^10.3.10",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
+    "@ptc-org/nestjs-query-graphql": "^7.0.0",
+    "@ptc-org/nestjs-query-typeorm": "^7.0.0",
     "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.2",
@@ -52,7 +55,9 @@
     "cache-manager": "^5.7.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dataloader": "^2.2.2",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^15.0.2",
     "ora": "^6.3.1",
@@ -63,10 +68,13 @@
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.8.0",
     "@nestjs/cli": "^10.4.2",
