--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["additional.d.ts", "**/*.ts", "**/*.tsx", "**/*.mjs"],
-  "exclude": ["node_modules"]
+  "include": ["additional.d.ts", "**/*.ts", "**/*.mjs"],
+  "exclude": ["node_modules", "**/frontend"]
 }
